--- a/initial/build.gradle
+++ b/initial/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     repositories {
+        mavenCentral()
         maven { url "http://repo.spring.io/milestone" }
         maven { url "http://repo.spring.io/release" }
         mavenLocal()
