--- a/initial/pom.xml
+++ b/initial/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.0.0.RC4</version>
+        <version>1.0.0.RELEASE</version>
     </parent>
 
     <dependencies>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.grails</groupId>
             <artifactId>gorm-mongodb-spring-boot</artifactId>
-            <version>1.0.0.BUILD-SNAPSHOT</version>
+            <version>1.0.0.RC1</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
