--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.0.0.RELEASE</version>
+        <version>1.0.1.RELEASE</version>
     </parent>
 
     <dependencies>
@@ -21,8 +21,13 @@
         <dependency>
             <groupId>org.grails</groupId>
             <artifactId>gorm-mongodb-spring-boot</artifactId>
-            <version>1.0.0.RC1</version>
+            <version>1.0.0.RC2</version>
         </dependency>
+        <dependency>
+          <groupId>org.mongodb</groupId>
+          <artifactId>mongo-java-driver</artifactId>
+          <version>2.12.0</version>
+        </dependency>        
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
