--- a/initial/pom.xml
+++ b/initial/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.grails</groupId>
             <artifactId>gorm-mongodb-spring-boot</artifactId>
-            <version>1.0.0.RC3</version>
+            <version>1.0.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
