--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -26,7 +26,7 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.grails:gorm-mongodb-spring-boot:1.0.0.RC3")
+    compile("org.grails:gorm-mongodb-spring-boot:1.0.0.RELEASE")
 
     testCompile("junit:junit")
 }
