--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -2,11 +2,13 @@ buildscript {
     repositories {
         mavenLocal()
         mavenCentral()
+    mavenLocal()
+        mavenCentral()
         maven { url "http://repo.spring.io/milestone" }
         maven { url "http://repo.spring.io/release" }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.0.2.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.1.0.RELEASE")
     }
 }
 
@@ -19,8 +21,10 @@ jar {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
     mavenLocal()
+        mavenCentral()
     maven { url "http://repo.spring.io/milestone" }
 }
 
