--- a/initial/build.gradle
+++ b/initial/build.gradle
@@ -1,12 +1,14 @@
 buildscript {
     repositories {
+    mavenLocal()
         mavenCentral()
         maven { url "http://repo.spring.io/milestone" }
         maven { url "http://repo.spring.io/release" }
         mavenLocal()
+        mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.0.2.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.1.0.RELEASE")
     }
 }
 
@@ -19,8 +21,10 @@ jar {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
     mavenLocal()
+        mavenCentral()
     maven { url "http://repo.spring.io/milestone" }
 }
 
