--- a/initial/build.gradle
+++ b/initial/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     mavenLocal()
         mavenCentral()
         maven { url "http://repo.spring.io/milestone" }
-        maven { url "http://repo.spring.io/release" }
+        maven { url "http://repo.spring.io/libs-release" }
         mavenLocal()
         mavenCentral()
     }
