--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -24,13 +24,9 @@
             <version>1.0.0.RELEASE</version>
         </dependency>
         <dependency>
-          <groupId>org.mongodb</groupId>
-          <artifactId>mongo-java-driver</artifactId>
-          <version>2.12.1</version>
-        </dependency>        
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
