--- a/initial/pom.xml
+++ b/initial/pom.xml
@@ -24,8 +24,9 @@
             <version>1.0.0.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
