--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
     repositories {
-        mavenLocal()
-        mavenCentral()
-    mavenLocal()
-        mavenCentral()
-        maven { url "http://repo.spring.io/milestone" }
-        maven { url "http://repo.spring.io/libs-release" }
+//        mavenLocal()
+//        mavenCentral()
+//    mavenLocal()
+//        mavenCentral()
+//        maven { url "http://repo.spring.io/milestone" }
+//        maven { url "http://repo.spring.io/libs-release" }
+        maven { url "http://localhost:8081/artifactory/remote-repos" }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.1.4.RELEASE")
@@ -21,11 +22,12 @@ jar {
 }
 
 repositories {
-    mavenLocal()
-    mavenCentral()
-    mavenLocal()
-        mavenCentral()
-    maven { url "http://repo.spring.io/milestone" }
+//    mavenLocal()
+//    mavenCentral()
+//    mavenLocal()
+//        mavenCentral()
+//    maven { url "http://repo.spring.io/milestone" }
+    maven { url "http://localhost:8081/artifactory/remote-repos" }
 }
 
 dependencies {
